--- a/Shopping Cart/templates/SearchWithCSSDataDBAddToCartTable.html
+++ b/Shopping Cart/templates/SearchWithCSSDataDBAddToCartTable.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Jinja2 Example</title>
+    <title>Search</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='search-result.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='style_table_dataframe.css') }}">
